Elimino la carpeta nombre-de-la-carpeta

--- a/Ejercicio2/index.html
+++ b/Ejercicio2/index.html
@@ -16,12 +16,9 @@
             <h2>Bibliografía y contenidos</h2>
             <p>Lista de libros y recursos recomendados para la materia:
                 <ul>
-                    <li>HTML y CSS: Diseño y construcción de sitios web - Jon Duckett</li>
-                    <li>JavaScript y jQuery: Desarrollo web interactivo - Jon Duckett</li>
-                    <li>Learning Web Design - Jennifer Niederst Robbins</li>
-                    <li>Don't Make Me Think - Steve Krug</li>
-                    <li>Responsive Web Design with HTML5 and CSS - Ben Frain</li>
-                </ul>
+                    <li>Diseño de páginas Web - Davis, Jack,. Merritt, Susan.</li>
+                    <li>Diseño web con CSS - Schulz, Ralph G.</li>
+                 </ul>
             </p>
         </section>
 
@@ -37,7 +34,7 @@
         </section>
 
         <section>
-            <h2>Actividades UVAs</h2>
+            <h2>Actividades UVA</h2>
             <ul>
                 <li>UVA1
                     <ul>
